--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,8 +60,13 @@ $theme-colors: (
 @import "vendor/navbar";
 @import "vendor/dropdown";
 @import "vendor/card";
+@import "vendor/carousel";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "vendor/utilities/api";
 
 // 8. Add additional custom code here
+
+.sezconf{
+  background-color: #ffd375;
+}
