fatto il pull con il branch di jacopo

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,6 +67,12 @@ $theme-colors: (
 
 // 8. Add additional custom code here
 
+
 .sezconf{
   background-color: #ffd375;
+}
+
+.background {
+  min-height: 80vh;
+
 }
