--- a/scss/style.scss
+++ b/scss/style.scss
@@ -76,3 +76,8 @@ $theme-colors: (
   min-height: 80vh;
 
 }
+
+.carousel-control-prev-icon {
+  background-image: url("../dist/img/right-arrow.png");
+}
+
