fatte un paio di mod

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -68,3 +68,13 @@ $theme-colors: (
 
 // 8. Add additional custom code here
 
+
+body {
+  font-family: "Lato", sans-serif;
+}
+
+.active {
+  color: #F82B2B;
+}
+
+
