--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,16 +5,16 @@
 @import "vendor/functions";
 
 // 2. Include any default variable overrides here
-$blue:    #0d6efd;
-$indigo:  #6610f2;
-$purple:  #6f42c1;
-$pink:    #d63384;
-$red:     #dc3545;
-$orange:  #fd7e14;
-$yellow:  #ffc107;
-$green:   #198754;
-$teal:    #20c997;
-$cyan:    #0dcaf0;
+$blue: #0d6efd;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #198754;
+$teal: #20c997;
+$cyan: #0dcaf0;
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "vendor/variables";
@@ -32,14 +32,14 @@ $spacers: (
 );
 
 $theme-colors: (
-  "primary":    $primary,
-  "secondary":  $secondary,
-  "success":    $success,
-  "info":       $info,
-  "warning":    $warning,
-  "danger":     $danger,
-  "light":      $light,
-  "dark":       $dark,
+  "primary": $primary,
+  "secondary": $secondary,
+  "success": $success,
+  "info": $info,
+  "warning": $warning,
+  "danger": $danger,
+  "light": $light,
+  "dark": $dark,
 );
 
 // 5. Include remainder of required parts
@@ -82,3 +82,52 @@ body {
 }
 
 
+.carousel-wrapper {
+  margin: 0 auto;
+  width: 50%;
+  position: relative;
+}
+
+.carousel-track {
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+  /* 3 card */
+}
+
+.custom-card {
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  opacity: 0.5;
+  transform: scale(0.9);
+
+  width: 100%;
+  flex: 0 0 100%;
+  /* Ogni card prende tutta la larghezza visibile */
+  padding: 1rem;
+  box-sizing: border-box;
+}
+.custom-card.active {
+  opacity: 1;
+  transform: scale(1.05);
+  z-index: 2;
+}
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.445);
+  color: white;
+  border: none;
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.arrow-left {
+  left: 0;
+}
+
+.arrow-right {
+  right: 0;
+}
