--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,16 +5,16 @@
 @import "vendor/functions";
 
 // 2. Include any default variable overrides here
-$blue:    #0d6efd;
-$indigo:  #6610f2;
-$purple:  #6f42c1;
-$pink:    #d63384;
-$red:     #dc3545;
-$orange:  #fd7e14;
-$yellow:  #ffc107;
-$green:   #198754;
-$teal:    #20c997;
-$cyan:    #0dcaf0;
+$blue: #0d6efd;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #198754;
+$teal: #20c997;
+$cyan: #0dcaf0;
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "vendor/variables";
@@ -32,14 +32,14 @@ $spacers: (
 );
 
 $theme-colors: (
-  "primary":    $primary,
-  "secondary":  $secondary,
-  "success":    $success,
-  "info":       $info,
-  "warning":    $warning,
-  "danger":     $danger,
-  "light":      $light,
-  "dark":       $dark,
+  "primary": $primary,
+  "secondary": $secondary,
+  "success": $success,
+  "info": $info,
+  "warning": $warning,
+  "danger": $danger,
+  "light": $light,
+  "dark": $dark,
 );
 
 // 5. Include remainder of required parts
@@ -81,4 +81,15 @@ a {
   color: black;
   text-decoration: none;
 }
+
+header {
+  background-image: linear-gradient(to bottom, rgba(196, 193, 193, 0.5), rgba(0,0,0,0)), 
+    url('https://www.kedos-srl.it/wp-content/uploads/2021/10/bg_home-1.jpg');
+  background-size: cover;
+  position: relative;
+  background-position: 50%;
+  height: 80vh;
+}
+
+
 
