--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@ $yellow: #ffc107;
 $green: #198754;
 $teal: #20c997;
 $cyan: #0dcaf0;
+$grkedos: #50C3A3;
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "vendor/variables";
@@ -83,7 +84,7 @@ a {
 }
 
 header {
-  background-image: linear-gradient(to bottom, rgba(196, 193, 193, 0.5), rgba(0,0,0,0)), 
+  background-image: linear-gradient(to bottom, rgba(196, 193, 193, 0.5), rgba(0, 0, 0, 0)),
     url('https://www.kedos-srl.it/wp-content/uploads/2021/10/bg_home-1.jpg');
   background-size: cover;
   position: relative;
@@ -91,5 +92,10 @@ header {
   height: 80vh;
 }
 
+.vh-50 {
+  height: 50vh;
+}
 
-
+.card {
+  --bs-card-bg: #ffffffbd;
+}
