--- a/scss/style.scss
+++ b/scss/style.scss
@@ -109,30 +109,35 @@ header {
 
 .btn-size {
   height: 50px;
-  width: 190px; 
+  width: 190px;
 }
 
-.w-card{
-  
+.w-card {
+
   @include media-breakpoint-up(sm) {
     max-width: 500px;
   }
+
   @include media-breakpoint-up(md) {
     min-width: 550px;
   }
+
   @include media-breakpoint-up(lg) {
     max-width: 600px;
   }
 }
 
-h1{
+.card-title {
+  margin-bottom: var(--bs-card-title-spacer-y);
+  color: $rossokd;
   font-weight: bold;
-  color: $rossokd !important;
 }
+
+
 
 .ms-lg-8 {
   @include media-breakpoint-up(lg) {
     margin-left: 11rem !important;
   }
-  
+
 }
