--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,10 @@
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "vendor/functions";
 
+
 // 2. Include any default variable overrides here
+$spacer: 1rem;
+
 $blue: #0d6efd;
 $indigo: #6610f2;
 $purple: #6f42c1;
@@ -23,6 +26,7 @@ $rossokd: #C72939;
 @import "vendor/variables";
 @import "vendor/variables-dark";
 // 4. Include any default map overrides here
+
 $spacers: (
   0: 0,
   1: $spacer * .25,
@@ -31,6 +35,8 @@ $spacers: (
   4: $spacer * 1.5,
   5: $spacer * 3,
   6: $spacer * 4,
+  8: $spacer * 6,
+  13: $spacer * 11,
 );
 
 
@@ -130,14 +136,13 @@ header {
 .card-title {
   margin-bottom: var(--bs-card-title-spacer-y);
   color: $rossokd;
-  font-weight: bold;
+  font-weight: 900; 
 }
 
+.zoom-img {
+  transition: transform 0.3s ease;
+}
 
-
-.ms-lg-8 {
-  @include media-breakpoint-up(lg) {
-    margin-left: 11rem !important;
-  }
-
+.zoom-img:hover {
+  transform: scale(1.1);
 }
