--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,8 @@
 @import "vendor/functions";
 
 // 2. Include any default variable overrides here
+$spacer: 1rem;
+
 $blue: #0d6efd;
 $indigo: #6610f2;
 $purple: #6f42c1;
@@ -23,6 +25,7 @@ $rossokd: #C72939;
 @import "vendor/variables";
 @import "vendor/variables-dark";
 // 4. Include any default map overrides here
+
 $spacers: (
   0: 0,
   1: $spacer * .25,
@@ -31,6 +34,8 @@ $spacers: (
   4: $spacer * 1.5,
   5: $spacer * 3,
   6: $spacer * 4,
+  8: $spacer * 6,
+  13: $spacer * 11,
 );
 
 
@@ -204,20 +209,22 @@ header {
   }
 }
 
-h1{
-  font-weight: bold;
-  color: $rossokd !important;
+.card-title {
+  margin-bottom: var(--bs-card-title-spacer-y);
+  color: $rossokd;
+  font-weight: 900; 
 }
 
-.ms-lg-8 {
-  @include media-breakpoint-up(lg) {
-    margin-left: 11rem !important;
-  }
-  
+.zoom-img {
+  transition: transform 0.3s ease;
+}
+
+.zoom-img:hover {
+  transform: scale(1.1);
 }
 
 h2{
-  color: #C72939;
+  color:#F82B2B;
 }
 
 .desktop{
@@ -236,8 +243,6 @@ h2{
     display: block;
   }
 }
-
-
 
 .step {
   display: none;
@@ -275,7 +280,6 @@ h2{
 .card-body {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 #step-2 .card-title {
@@ -287,5 +291,6 @@ h2{
   box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
   transform: scale(1.05);
   transition: all 0.3s ease;
+
 }
 
