--- a/scss/style.scss
+++ b/scss/style.scss
@@ -144,11 +144,13 @@ a {
   padding: 1rem;
   box-sizing: border-box;
 }
+
 .custom-card.active {
   opacity: 1;
   transform: scale(1.05);
   z-index: 2;
 }
+
 .arrow {
   position: absolute;
   top: 50%;
@@ -215,7 +217,7 @@ header {
 .card-title {
   margin-bottom: var(--bs-card-title-spacer-y);
   color: $rossokd;
-  font-weight: 900; 
+  font-weight: 900;
 }
 
 .zoom-img {
@@ -226,15 +228,15 @@ header {
   transform: scale(1.1);
 }
 
-h2{
-  color:#F82B2B;
+h2 {
+  color: #F82B2B;
 }
 
-.desktop{
+.desktop {
   display: block;
 }
 
-.mobile{
+.mobile {
   display: none;
 }
 
@@ -242,6 +244,7 @@ h2{
   .desktop {
     display: none;
   }
+
   .mobile {
     display: block;
   }
@@ -272,7 +275,7 @@ h2{
   border-top: 2px solid #407667;
 }
 
-.btn-bl{
+.btn-bl {
   text-decoration: underline;
   color: #407667;
   border: none;
@@ -297,3 +300,58 @@ h2{
 
 }
 
+.nav-item a {
+  position: relative;
+  overflow: hidden;
+  height: 24px;
+  /* altezza del testo */
+  text-decoration: none;
+  font-weight: 500;
+  display: inline-block;
+}
+
+.roll {
+  display: block;
+  transform: translateY(0);
+  transition: transform 0.3s ease;
+}
+
+/* Al passaggio del mouse: fa salire il testo attuale */
+.nav-item a:hover .roll {
+  animation: slide-up-reveal 0.5s forwards;
+}
+
+/* Animazione: sale e rientra da sotto */
+@keyframes slide-up-reveal {
+  0% {
+    transform: translateY(0);
+  }
+
+  49% {
+    transform: translateY(-100%);
+  }
+
+  50% {
+    transform: translateY(100%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.w-nav {
+  margin: 0 auto;
+  @include media-breakpoint-up(sm) {
+    max-width: 300px;
+  }
+
+  @include media-breakpoint-up(md) {
+    min-width: 500px;
+  }
+
+  @include media-breakpoint-up(lg) {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+}
