modificata la navbar

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -350,10 +350,10 @@ h2 {
 
 .w-nav {
   margin: 0 auto;
-  max-width: 270px;
+  max-width: 300px;
 
   @include media-breakpoint-up(md) {
-    min-width: 500px;
+    min-width: 400px;
   }
 
   @include media-breakpoint-up(lg) {
@@ -361,8 +361,10 @@ h2 {
   }
 }
 
-.lingua-nav {
-  @include media-breakpoint-between(sm,md) {
-    margin-top: -4rem;
+.mt-xs-4 {
+  margin-top: 1.5rem;
+
+  @include media-breakpoint-up(lg) {
+    margin-top: 0;
   }
 }
