modifica sezione Info Generali

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -201,6 +201,14 @@ header {
 
 // Sezioni Info (Cosmin)
 
+// Jacopo
+.infoGeneriche {
+
+  .card {
+    background-color: #F4F4F4;
+  }
+}
+
 .btn-size {
   height: 50px;
   width: 190px;
