--- a/scss/style.scss
+++ b/scss/style.scss
@@ -200,13 +200,13 @@ header {
   }
 
   @include media-breakpoint-down(md) {
-      .colImg {
-        display: none;
-      }
+    .colImg {
+      display: none;
+    }
 
-      .cardContainer {
-        flex-direction: column;
-      }
+    .cardContainer {
+      flex-direction: column;
+    }
   }
 }
 
@@ -222,9 +222,9 @@ header {
     form {
       width: 100%;
 
-        button[type="submit"] {
-          background: linear-gradient(90deg, #40c9a2, #0f7b61);
-          border: none;
+      button[type="submit"] {
+        background: linear-gradient(90deg, #40c9a2, #0f7b61);
+        border: none;
       }
     }
   }
@@ -239,11 +239,12 @@ header {
 
 }
 
-#contactForm button[type="submit"], .step1Button {
+#contactForm button[type="submit"],
+.step1Button {
   width: 10%;
   background: linear-gradient(90deg, #40c9a2, #0f7b61);
   border: none;
-  color: #fff; 
+  color: #fff;
 }
 
 .custom-gap {
@@ -306,12 +307,12 @@ h2 {
   }
 }
 
-@include media-breakpoint-up(lg){
+@include media-breakpoint-up(lg) {
   .imgConf {
-      width: 500px;
-      height: auto;
-    }
-} 
+    width: 500px;
+    height: auto;
+  }
+}
 
 
 .step {
@@ -367,6 +368,7 @@ h2 {
     opacity: 0;
     transform: translateY(-20px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -386,6 +388,7 @@ h2 {
     opacity: 0;
     transform: translateY(20px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -405,6 +408,7 @@ h2 {
     opacity: 0;
     transform: scale(0.8);
   }
+
   to {
     opacity: 1;
     transform: scale(1);
@@ -424,6 +428,7 @@ h2 {
     opacity: 0;
     transform: translateX(-250px);
   }
+
   to {
     opacity: 1;
     transform: translateX(0);
@@ -431,7 +436,7 @@ h2 {
 }
 
 .slide-in-left {
-  opacity: 0; 
+  opacity: 0;
 }
 
 .slide-in-left.animate {
@@ -443,6 +448,7 @@ h2 {
     opacity: 0;
     transform: translateX(250px);
   }
+
   to {
     opacity: 1;
     transform: translateX(0);
@@ -455,4 +461,35 @@ h2 {
 
 .slide-in-right.animate {
   animation: slideInRight 1s ease-out forwards;
+}
+
+@media (max-width: 767.98px) {
+  #summaryWrapper {
+    position: relative;
+    height: 0;
+  }
+
+  .summary-popup {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background: #fff;
+    padding: 1rem;
+    border-top: 2px solid #ccc;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.15);
+    z-index: 1050;
+  }
+
+  .summary-popup.stop-fixed {
+    position: absolute;
+    bottom: 100%;
+  }
+
+  .main-content {
+    padding-bottom: 325px;
+  }
+}
+.summary-text{
+  flex:1;
 }
