resa la navbar fissa e sistemata la card nell header

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -283,7 +283,7 @@ header {
 }
 
 h1 {
-  font-weight: bold;
+  font-weight: 900;
   color: $rossokd;
 }
 
@@ -297,6 +297,12 @@ h2 {
 
 .mobile {
   display: none;
+}
+
+@include media-breakpoint-down(md){
+  .menotesto {
+  display: none;
+}
 }
 
 @media (max-width: 768px) {
@@ -530,4 +536,8 @@ h2 {
   right: 0;
   left: 0;
   z-index: 1030;
+}
+
+.card-body{
+  justify-content: normal;
 }
