correzzione bug merge

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -182,6 +182,7 @@ header {
   background-size: cover;
   position: relative;
   background-position: 50%;
+  min-height: 80vh;
 }
 
 .card {
@@ -308,9 +309,6 @@ h2 {
 .mobile {
   display: none;
 }
-
-
-
 
 @media (max-width: 768px) {
   .desktop {
