--- a/scss/style.scss
+++ b/scss/style.scss
@@ -104,11 +104,6 @@ body>main,
   color: $rossokd;
 }
 
-.nav-item a {
-  color: black;
-  text-decoration: none;
-}
-
 .txt-footer {
   text-decoration: none;
   color: white;
@@ -377,6 +372,8 @@ h2 {
 // Animazioni CSS
 
 .nav-item a {
+  color: black;
+  text-decoration: none;
   position: relative;
   overflow: hidden;
   height: 24px;
@@ -384,6 +381,7 @@ h2 {
   text-decoration: none;
   font-weight: 500;
   display: inline-block;
+  cursor: pointer;
 }
 
 
