--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,6 +75,7 @@ $theme-colors: (
 @import "vendor/card";
 @import "vendor/carousel";
 @import "vendor/transitions";
+@import "vendor/modal";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "vendor/utilities/api";
