--- a/scss/style.scss
+++ b/scss/style.scss
@@ -608,3 +608,12 @@ h2 {
 .card-body {
   justify-content: normal;
 }
+
+.social-icon img {
+  transition: transform 0.3s ease;
+}
+
+.social-icon:hover img {
+  transform: scale(1.2);
+}
+
