--- a/scss/style.scss
+++ b/scss/style.scss
@@ -289,13 +289,8 @@ header {
 }
 
 .scopri-link {
-  text-decoration: none;
-  font-weight: bold;
+  text-decoration-color: #407667;
   transition: color 0.3s ease, text-decoration 0.3s ease;
-}
-
-.scopri-link:hover {
-  text-decoration: underline;
 }
 
 // Fine Jacopo
@@ -640,7 +635,7 @@ h2 {
     padding: 1rem;
     border-top: 2px solid #ccc;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.15);
-    z-index: 1050;
+    z-index: 100;
   }
   
 
@@ -649,9 +644,6 @@ h2 {
     bottom: 100%;
   }
 
-  .main-content {
-    padding-bottom: 325px;
-  }
 }
 .summary-text{
   flex:1;
